# touchpoints

./: Cargo.toml  strace_all  strace_test.txt  strace_test2.txt  strace_test3.txt
simple/: .gitignore  Cargo.toml  run.bash
simple/src/: main.rs
src/: file_tree.rs  main.rs  nom_parse.rs
trace/: strace_all.24003  strace_all.24004  strace_all.24005  strace_all.24006  strace_all.24007  strace_all.24008  strace_all.24009  strace_all.24010  strace_all.24011  strace_all.24012  strace_all.24013  strace_all.24014  strace_all.24015  strace_all.24016  strace_all.24017  strace_all.24018  strace_all.24019  strace_all.24020  strace_all.24021  strace_all.24022  strace_all.24023  strace_all.24024  strace_all.24025  strace_all.24026  strace_all.24027  strace_all.24028  strace_all.24029  strace_all.24030  strace_all.24031  strace_all.24032  strace_all.24033  strace_all.24034  strace_all.24035  strace_all.24036  strace_all.24037  strace_all.24038  strace_all.24039  strace_all.24040  strace_all.24041  strace_all.24042  (+40 more)
