[package]
name = "touchpoints"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
regex = "1.5"
once_cell = "1.7.0"
thiserror = "1.0.24"
bumpalo = {version = "3.6.1", features = ["boxed", "collections"]}
itertools = "0.10.0"
hashbrown = {version = "0.11.2"}
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
